--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "api-mongodb-com-teste",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "NODE_ENV=development nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test-integration": "mocha --opts test/integration/mocha.opts  test/integration/*.js"
+    "test-integration": "NODE_ENV=test mocha --opts test/integration/mocha.opts test/integration/*.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
     "express": "^4.14.0",
