--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "NODE_ENV=development nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "test-integration": "NODE_ENV=test mocha --opts test/integration/mocha.opts test/integration/*.js"
+    "test2": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test mocha --opts test/integration/mocha.opts test/integration/*.js"
   },
   "author": "",
   "license": "ISC",
